# CrystalPath

./: .gitignore  README.md  pyproject.toml  run_crystalpath.command
examples/: bcc_fe.cif  fcc_cu.cif
packaging/macos/: build_app.sh  entrypoint.py  package_release.sh
scripts/: capture_preview.py
src/crystalpath/: __init__.py  __main__.py  app.py
src/crystalpath/analysis/: __init__.py  interstitials.py
src/crystalpath/core/: __init__.py  structure.py
src/crystalpath/rendering/: __init__.py  geometry.py  palette.py  viewer.py
src/crystalpath/ui/: main_window.py
tests/: test_interstitials.py  test_structure.py
