[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crystalpath"
version = "0.3.4"
description = "A focused CIF viewer for crystal structure and future channel analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "pymatgen>=2025.1",
  "pyvista>=0.44",
  "pyvistaqt>=0.11",
  "spglib>=2.5",
  "scipy>=1.13",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
crystalpath = "crystalpath.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
